Update read me with compilation and execution method.